# my_english_utils

./: LICENSE  README.md
gui_util/: .gitignore  CMakeLists.txt  DictionaryHolder.cpp  DictionaryHolder.h  globlogger.cpp  globlogger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  srtworker.cpp  srtworker.h  text_utils.cpp  text_utils.h  textworker.cpp  textworker.h  utils_file.h  wlogic_error.h
src_dictionary_diff/: CMakeLists.txt  DictionaryList.h  main.cpp
srt_to_txt/srt_to_txt/: CMakeLists.txt  main.cpp
